--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,166 +1,244 @@
 body {
-  padding: 80px 40px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
- /* background-image: url('/images/background2.png');*/
+    background: #0e0e0e;
+    color: #fff;
 }
 
-#index-search {
-	width: 80%;
+.search-form ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: #6c6b6b;
 }
 
-.nav-search input {
-	width: 400px !important;
-	margin-right: 5px;	
+.search-form ::-moz-placeholder { /* Firefox 19+ */
+    color: #6c6b6b;
 }
 
-.view_tx {
-	text-align: center;
+.search-form :-ms-input-placeholder { /* IE 10+ */
+    color: #6c6b6b;
 }
 
-.block-last {
-	margin: 0;
-	margin-right: 10px;
+.search-form :-moz-placeholder { /* Firefox 18- */
+    color: #6c6b6b;
 }
 
-.block-next {
-	margin: 0;
-	margin-left: 10px;
-}
-#chart3 .jqplot-xaxis {
-	display: none;
-}
-
-.data {
-	display: block;
-	overflow: hidden;
-	width: 100%;
+.main-content {
+    background: url(../images/main-bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 45px 0;
 }
 
-.txid {
-	width: 100%;
-	display:block;
-	overflow: hidden;
+.logo img {
+    width: 136px;
 }
 
-.panel-address-summary {
- margin-bottom: 5px;
+.main-menu {
+    background: rgba(255, 255, 255, 0.01);
 }
 
-/* datatable tweaks */
-table {
-	width: 100% !important;
-}
-.dataTables_info, .dataTables_length {
-	padding-left: 10px;
-}
-
-.dataTables_info {
-	display: hidden !important;
+.list-button button {
+    background: #2444d4;
+    border: none;
+    color: #fff;
+    border-radius: 4px;
+    padding: 2px 10px;
+    margin-left: 10px;
 }
 
-.dataTables_length {
-	padding-top: 10px;
+.top-header {
+    padding: 10px 0;
 }
 
-.dataTables_paginate {
-	padding-right: 5px;
+.main-menu .navbar {
+    margin: 0;
+    min-height: 0;
 }
 
-.tab-pane {
-	margin-top: 5px;
+.main-menu li a {
+    color: #6c6b6b;
 }
 
-table a:not(.btn),.table a:not(.btn){
-	text-decoration:none
+.navbar-nav > li > a {
+    padding: 7px 15px;
 }
 
-tr {
-	width: 100%;
+.navbar-header a {
+    color: #fff;
+    font-size: 17px;
+    font-weight: bold;
+    padding: 7px 50px 7px 7px;
+    height: auto;
 }
 
-.footer-padding {
-	height: 50px;
-	width: 100%;
+.nav > li > a:focus, .nav > li > a:hover {
+    background-color: transparent;
+    color: #fff;
 }
 
-.summary-table {
-	margin: 0px !important;
+.nav i {
+    margin-right: 5px;
 }
 
-#loading-icon {
-	width: 30px;
-    margin: 10px 10px;
+.logo-slider {
+    margin-bottom: 45px;
 }
 
-.menu-text {
-	margin-left:5px;
+.search-form form {
+    width: 60%;
+    display: inline-block;
 }
 
-#twitter-icon {
-	font-size: 20px;
-}
-.connections {
-	position: absolute;
-	bottom: 15px;
-	right: 15px;
+.search-form input {
+    background: #191919;
+    border: none;
+    font-size: 16px;
 }
 
-#lblBlockcount {
-	margin-right: 10px;
+.search-form {
+    margin-bottom: 45px;
 }
 
-#twitter-icon img{
-	width: 40px;
-	margin: 5px 5px;
+.search-form button {
+    background: #000;
+    border: none;
+    color: #fff;
+    padding: 5px 25px;
 }
 
-#market_menu {
-	margin-bottom: 5px;
+.data-item b {
+    color: #cacaca;
+    font-size: 30px;
 }
 
-.label a:link {
-	color: #ffffff;
+.data-item p {
+    color: #6c6b6b;
+    font-size: 17px;
 }
 
-.label a:visited {
-	color: #ffffff;
+.list-transaction .panel-heading {
+    background: #3e3e3e;
 }
 
-.label a:hover {
-	color: #ffffff;
+.list-transaction .panel-heading h3 {
+    font-size: 17px;
+    margin: 0;
+    font-weight: bold;
+    color: #6c6b6b;
 }
 
-.label a:active {
-	color: #ffffff;
+.filter {
+    margin: 20px;
+    color: #6c6b6b;
+    display: inline-block;
+    width: 100%;
 }
 
-@media(max-width:767px){
-	body {
-		padding: 0px;
-		padding-top:60px;
-	}
+.filter select {
+    width: 65px;
+    float: left;
+    height: 30px;
+    margin: -5px 10px;
 }
 
-@media(max-width:1096px){
-	.nav-search input {
-	    width: 300px !important;
-    }
+.filter span {
+    float: left;
 }
 
-@media(max-width:865px){
-	.nav-search input {
-	    width: 150px !important;
-    }
-}
-.qrcode {
-	position: absolute;
-	top: 65px;
-	right: 15px;
+.list-transaction .panel {
+    background: #272727;
 }
 
-.footer-logo {
-	height: 40px;
-	position: absolute;
-	bottom: 0px;
+.table-bordered > tbody > tr > td, .table-bordered > tbody > tr > th, .table-bordered > tfoot > tr > td, .table-bordered > tfoot > tr > th, .table-bordered > thead > tr > td, .table-bordered > thead > tr > th {
+    border: 1px solid #6c6b6b;
 }
 
+.list-transaction .panel-body {
+    padding: 0;
+}
+
+.table-striped > tbody > tr:nth-of-type(2n+1) {
+    background-color: #111111;
+}
+
+.list-transaction {
+    padding: 50px;
+}
+
+.list-transaction .panel-footer {
+    background: #272727;
+    border: none;
+}
+
+.list-transaction .table {
+    border: 1px solid #6c6b6b;
+    margin: 0;
+}
+
+.list-transaction th {
+    text-align: center;
+}
+
+.copyright {
+    color: #6c6b6b;
+}
+
+.statistic {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+}
+
+.showing {
+    color: #6c6b6b;
+}
+
+.pagination li.disabled a {
+    color: #ffffff !important;
+    border-color: #6c6b6b;
+    background: #6c6b6b !important;
+}
+
+.pagination > .disabled > a, .pagination > .disabled > a:focus, .pagination > .disabled > a:hover, .pagination > .disabled > span, .pagination > .disabled > span:focus, .pagination > .disabled > span:hover {
+    border-color: #6c6b6b;
+}
+
+.pagination li.paginate_button.active, .pagination a:hover {
+    background: #319fd2 !important;
+    color: #fff !important;
+}
+
+.pagination > li > a:focus, .pagination > li > a:hover, .pagination > li > span:focus, .pagination > li > span:hover {
+    border-color: #319fd2;
+}
+
+.pagination > li > a, .pagination > li > span {
+    background: #0e0e0e;
+    color: #fff;
+    padding: 6px 10px;
+    border-color: #0e0e0e;
+}
+
+.footer {
+    position: relative;
+    padding: 15px 0;
+    border-top: 1px solid #6c6b6b;
+}
+
+table#recent-table {
+    width: auto !important;
+}
+
+a {
+    color: white;
+}
+
+#recent-table_wrapper .row {
+    margin: 10px 0;
+}
+
+#recent-table_wrapper .row > .col-xs-6 {
+    text-align: left;
+}
+
+
+label#lblBlockcount {
+    margin-right: 5px;
+}
