--- a/views/index.jade
+++ b/views/index.jade
@@ -3,8 +3,8 @@ extends layout
 block content
   script.
     $(document).ready(function(){
-      var stable = $('#block-table').dataTable( {  
-        autoWidth: true,      
+      var stable = $('#block-table').dataTable( {
+        autoWidth: true,
         searching: true,
         ordering: false,
         responsive: true,
@@ -29,8 +29,8 @@ block content
           //{ data: 'time', width: '20%' },
         ]
       });
-      var rtable = $('#recent-table').dataTable( {  
-        autoWidth: true,      
+      var rtable = $('#recent-table').dataTable( {
+        autoWidth: true,
         searching: false,
         ordering: false,
         responsive: true,
@@ -63,30 +63,30 @@ block content
         stable.api().ajax.reload(null, false);
       }, 60000 );
     });
-  .row
-    .col-md-12
-      if error !== null        
-        .alert.alert-danger.alert-dismissable(role='alert')
-          button.close(type='button', data-dismiss='alert') ×
-          strong #{settings.locale.ex_error} : #{error}
-      if warning !== null        
-        .alert.alert-warning.alert-dismissable(role='alert')
-          button.close(type='button', data-dismiss='alert') ×
-          strong #{settings.locale.ex_warning} #{warning}
-  
-  .col-md-12
-    .panel.panel-default
-      .panel-heading
-        strong #{settings.locale.ex_latest_transactions}
-      table#recent-table.table.table-bordered.table-striped
-        thead
-          tr
-            th.text-center #{settings.locale.ex_block}
-            th.hidden-xs.text-center #{settings.locale.tx_hash}
-            th.hidden-xs.text-center #{settings.locale.tx_recipients}
-            th.text-center #{settings.locale.mkt_amount} (#{settings.symbol})
-            th.text-center #{settings.locale.timestamp}
-        tbody.text-center
-    .footer-padding
-      
-              
+  .list-transaction
+    .row
+      .col-md-12
+        if error !== null
+          .alert.alert-danger.alert-dismissable(role='alert')
+            button.close(type='button', data-dismiss='alert') ×
+            strong #{settings.locale.ex_error} : #{error}
+        if warning !== null
+          .alert.alert-warning.alert-dismissable(role='alert')
+            button.close(type='button', data-dismiss='alert') ×
+            strong #{settings.locale.ex_warning} #{warning}
+      .col-md-12
+        .panel
+          .panel-heading
+            h3 #{settings.locale.ex_latest_transactions}
+          .panel-body
+            .table-responsive.text-center
+              table#recent-table.table.table-bordered.table-striped
+                thead
+                  tr
+                    th.text-center #{settings.locale.ex_block}
+                    th.hidden-xs.text-center #{settings.locale.tx_hash}
+                    th.hidden-xs.text-center #{settings.locale.tx_recipients}
+                    th.text-center #{settings.locale.mkt_amount} (#{settings.symbol})
+                    th.text-center #{settings.locale.timestamp}
+                tbody.text-center
+              .footer-padding
