--- a/views/info.jade
+++ b/views/info.jade
@@ -1,130 +1,132 @@
 extends layout
 
 block content
-  .col-md-12.col-xs-12
-    .panel.panel-default
-      .panel-heading
-        strong #{settings.locale.api_title}
-      .panel-body
-        :markdown
-          *#{settings.locale.api_message}*
-          
-          ------
+  .list-transaction
+    .row
+      .col-md-12.col-xs-12
+        .panel.panel-default
+          .panel-heading
+            h3 #{settings.locale.api_title}
+          .panel-body
+            :markdown
+              *#{settings.locale.api_message}*
 
-          ### #{settings.locale.api_calls}
-          *Return data from coind*
+              ------
 
-          *  **getdifficulty**  
-             *#{settings.locale.api_getdifficulty}*  
-             [#{address}/api/getdifficulty](/api/getdifficulty)   
+              ### #{settings.locale.api_calls}
+              *Return data from coind*
 
-          *  **getconnectioncount**  
-             *#{settings.locale.api_getconnectioncount}*  
-             [#{address}/api/getconnectioncount](/api/getconnectioncount) 
+              *  **getdifficulty**
+                 *#{settings.locale.api_getdifficulty}*
+                 [#{address}/api/getdifficulty](/api/getdifficulty)
 
-          *  **getblockcount**  
-             *#{settings.locale.api_getblockcount}*  
-             [#{address}/api/getblockcount](/api/getblockcount)
+              *  **getconnectioncount**
+                 *#{settings.locale.api_getconnectioncount}*
+                 [#{address}/api/getconnectioncount](/api/getconnectioncount)
 
-          *  **getblockhash [index]**  
-             *#{settings.locale.api_getblockhash}*  
-             [#{address}/api/getblockhash?index=#{hashes.blockindex}](/api/getblockhash?index=#{hashes.blockindex})
+              *  **getblockcount**
+                 *#{settings.locale.api_getblockcount}*
+                 [#{address}/api/getblockcount](/api/getblockcount)
 
-          *  **getblock [hash]**  
-             *#{settings.locale.api_getblock}*  
-             [#{address}/api/getblock?hash=#{hashes.blockhash}](/api/getblock?hash=#{hashes.blockhash})
+              *  **getblockhash [index]**
+                 *#{settings.locale.api_getblockhash}*
+                 [#{address}/api/getblockhash?index=#{hashes.blockindex}](/api/getblockhash?index=#{hashes.blockindex})
 
-          *  **getrawtransaction [txid] [decrypt]**  
-             *#{settings.locale.api_getrawtransaction}*  
-             [#{address}/api/getrawtransaction?txid=#{hashes.txhash}&decrypt=0](/api/getrawtransaction?txid=#{hashes.txhash}&decrypt=0)  
-             [#{address}/api/getrawtransaction?txid=#{hashes.txhash}&decrypt=1](/api/getrawtransaction?txid=#{hashes.txhash}&decrypt=1)
-        
+              *  **getblock [hash]**
+                 *#{settings.locale.api_getblock}*
+                 [#{address}/api/getblock?hash=#{hashes.blockhash}](/api/getblock?hash=#{hashes.blockhash})
 
-        if settings.index.show_hashrate == true
-          :markdown
-            *  **getnetworkhashps**  
-               *#{settings.locale.api_getnetworkhashps}*  
-               [#{address}/api/getnetworkhashps](/api/getnetworkhashps)
+              *  **getrawtransaction [txid] [decrypt]**
+                 *#{settings.locale.api_getrawtransaction}*
+                 [#{address}/api/getrawtransaction?txid=#{hashes.txhash}&decrypt=0](/api/getrawtransaction?txid=#{hashes.txhash}&decrypt=0)
+                 [#{address}/api/getrawtransaction?txid=#{hashes.txhash}&decrypt=1](/api/getrawtransaction?txid=#{hashes.txhash}&decrypt=1)
 
 
+            if settings.index.show_hashrate == true
+              :markdown
+                *  **getnetworkhashps**
+                   *#{settings.locale.api_getnetworkhashps}*
+                   [#{address}/api/getnetworkhashps](/api/getnetworkhashps)
 
-        if settings.heavy == true
-          :markdown
-            *  **getmaxmoney**  
-               *#{settings.locale.api_getmaxmoney}*  
-               [#{address}/api/getmaxmoney](/api/getmaxmoney)
-            
-            *  **getmaxvote**  
-               *#{settings.locale.api_getmaxvote}*  
-               [#{address}/api/getmaxvote](/api/getmaxvote)
 
-            *  **getvote**  
-               *#{settings.locale.api_getvote}*  
-               [#{address}/api/getvote](/api/getvote)
 
-            *  **getphase**  
-               *#{settings.locale.api_getphase}*  
-               [#{address}/api/getphase](/api/getphase)
+            if settings.heavy == true
+              :markdown
+                *  **getmaxmoney**
+                   *#{settings.locale.api_getmaxmoney}*
+                   [#{address}/api/getmaxmoney](/api/getmaxmoney)
 
-            *  **getreward**  
-               *#{settings.locale.api_getreward}*  
-               [#{address}/api/getreward](/api/getreward)
+                *  **getmaxvote**
+                   *#{settings.locale.api_getmaxvote}*
+                   [#{address}/api/getmaxvote](/api/getmaxvote)
 
-            *  **getsupply**  
-               *#{settings.locale.api_getsupply}*  
-               [#{address}/api/getsupply](/api/getsupply)  
+                *  **getvote**
+                   *#{settings.locale.api_getvote}*
+                   [#{address}/api/getvote](/api/getvote)
 
-            *  **getnextrewardestimate**  
-               *#{settings.locale.api_getnextrewardestimate}*  
-               [#{address}/api/getnextrewardestimate](/api/getnextrewardestimate)
+                *  **getphase**
+                   *#{settings.locale.api_getphase}*
+                   [#{address}/api/getphase](/api/getphase)
 
-            *  **getnextrewardwhenstr**  
-               *#{settings.locale.api_getnextrewardwhenstr}*  
-               [#{address}/api/getnextrewardwhenstr](/api/getnextrewardwhenstr)                                                       
+                *  **getreward**
+                   *#{settings.locale.api_getreward}*
+                   [#{address}/api/getreward](/api/getreward)
 
-        :markdown
-          ------
+                *  **getsupply**
+                   *#{settings.locale.api_getsupply}*
+                   [#{address}/api/getsupply](/api/getsupply)
 
-          ### Extended API 
-          *Return data from local indexes*
+                *  **getnextrewardestimate**
+                   *#{settings.locale.api_getnextrewardestimate}*
+                   [#{address}/api/getnextrewardestimate](/api/getnextrewardestimate)
 
-          *  **getmoneysupply**  
-               *Returns current money supply*  
-               [#{address}/ext/getmoneysupply](/ext/getmoneysupply)
+                *  **getnextrewardwhenstr**
+                   *#{settings.locale.api_getnextrewardwhenstr}*
+                   [#{address}/api/getnextrewardwhenstr](/api/getnextrewardwhenstr)
 
-          *  **getdistribution**  
-               *Returns wealth distribution stats*  
-               [#{address}/ext/getdistribution](/ext/getdistribution)               
+            :markdown
+              ------
 
-          *  **getaddress (/ext/getaddress/hash)**  
-               *Returns information for given address*  
-               [#{address}/ext/getaddress/#{hashes.address}](/ext/getaddress/#{hashes.address})
+              ### Extended API
+              *Return data from local indexes*
 
-          *  **getbalance (/ext/getbalance/hash)**  
-               *Returns current balance of given address*  
-               [#{address}/ext/getbalance/#{hashes.address}](/ext/getbalance/#{hashes.address})
+              *  **getmoneysupply**
+                   *Returns current money supply*
+                   [#{address}/ext/getmoneysupply](/ext/getmoneysupply)
 
-          *  **getlasttxs (/ext/getlasttxs/count/min)**  
-               *Returns last [count] transactions greater than [min]*  
-               *Note: returned values are in satoshis*  
-               [#{address}/ext/getlasttxs/10/100](/ext/getlasttxs/10/100)
+              *  **getdistribution**
+                   *Returns wealth distribution stats*
+                   [#{address}/ext/getdistribution](/ext/getdistribution)
 
-          ------
+              *  **getaddress (/ext/getaddress/hash)**
+                   *Returns information for given address*
+                   [#{address}/ext/getaddress/#{hashes.address}](/ext/getaddress/#{hashes.address})
 
-          ### Linking (GET)
-          *Linking to the block explorer*
+              *  **getbalance (/ext/getbalance/hash)**
+                   *Returns current balance of given address*
+                   [#{address}/ext/getbalance/#{hashes.address}](/ext/getbalance/#{hashes.address})
 
-          *  **transaction (/tx/txid)**  
-             [#{address}/tx/#{hashes.txhash}](/tx/#{hashes.txhash})
+              *  **getlasttxs (/ext/getlasttxs/count/min)**
+                   *Returns last [count] transactions greater than [min]*
+                   *Note: returned values are in satoshis*
+                   [#{address}/ext/getlasttxs/10/100](/ext/getlasttxs/10/100)
 
-          *  **block (/block/hash)**  
-             [#{address}/block/#{hashes.blockhash}](/block/#{hashes.blockhash})
-    
-          *  **address (/address/hash)**  
-             [#{address}/address/#{hashes.address}](/address/#{hashes.address})
+              ------
 
-          *  **qrcode (/qr/hash)**  
-             [#{address}/qr/#{hashes.address}](/qr/#{hashes.address})
+              ### Linking (GET)
+              *Linking to the block explorer*
 
-    .footer-padding
+              *  **transaction (/tx/txid)**
+                 [#{address}/tx/#{hashes.txhash}](/tx/#{hashes.txhash})
+
+              *  **block (/block/hash)**
+                 [#{address}/block/#{hashes.blockhash}](/block/#{hashes.blockhash})
+
+              *  **address (/address/hash)**
+                 [#{address}/address/#{hashes.address}](/address/#{hashes.address})
+
+              *  **qrcode (/qr/hash)**
+                 [#{address}/qr/#{hashes.address}](/qr/#{hashes.address})
+
+        .footer-padding
 
