--- a/views/network.jade
+++ b/views/network.jade
@@ -1,10 +1,10 @@
 extends layout
 
-block content   
+block content
   script.
     $(document).ready(function(){
-      var ctable = $('#connections-table').dataTable( {  
-        autoWidth: true,      
+      var ctable = $('#connections-table').dataTable( {
+        autoWidth: true,
         searching: false,
         ordering: false,
         responsive: true,
@@ -32,17 +32,22 @@ block content
         ]
       });
     });
-  .col-md-12(style="margin-bottom: 4%")
-    .row.text-center(style='margin-bottom:15px;')
-      i #{settings.locale.net_warning}
-    .panel.panel-default
-      .panel-heading
-        strong #{settings.locale.net_connections}
-      table#connections-table.table.table-bordered.table-striped
-        thead
-          tr
-            th.text-center #{settings.locale.net_address}
-            th.text-center #{settings.locale.net_protocol}
-            th.text-center #{settings.locale.net_subversion}
-            th.text-center #{settings.locale.net_country}
-        tbody.text-center
+  .list-transaction
+    .row
+      .col-md-12
+        .row.text-center(style='margin-bottom:15px;')
+          i #{settings.locale.net_warning}
+      .col-xs-12
+        .panel
+          .panel-heading
+            h3 #{settings.locale.net_connections}
+          .panel-body
+            .table-responsive.text-center
+              table#connections-table.table.table-bordered.table-striped
+                thead
+                  tr
+                    th.text-center #{settings.locale.net_address}
+                    th.text-center #{settings.locale.net_protocol}
+                    th.text-center #{settings.locale.net_subversion}
+                    th.text-center #{settings.locale.net_country}
+                tbody.text-center
