--- a/views/layout.jade
+++ b/views/layout.jade
@@ -88,8 +88,7 @@ html
                 img(src='/images/logo.png')
             .col-xs-6.list-button
               .pull-right
-                button Button 1
-                button Button 2
+                a.btn(href='https://aithercoin.com/#wallets') Download Wallet
     .main-menu
       .container
         .navbar
