--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -136,7 +136,7 @@ body {
     border: 2px solid #2c2c2c !important;
 }
 
-.panel-heading h3 {
+.panel-heading h3, .panel-heading strong {
     font-size: 14px;
     margin: 0;
     font-weight: bold;
@@ -295,4 +295,23 @@ label#lblBlockcount {
 
 .nav-tabs > li > a:hover {
     border-color: #2c2c2c;
+}
+
+.table > tbody > tr.success > td, .table > tbody > tr.success > th, .table > tbody > tr > td.success, .table > tbody > tr > th.success, .table > tfoot > tr.success > td, .table > tfoot > tr.success > th, .table > tfoot > tr > td.success, .table > tfoot > tr > th.success, .table > thead > tr.success > td, .table > thead > tr.success > th, .table > thead > tr > td.success, .table > thead > tr > th.success {
+    background-color: transparent;
+}
+
+.table > tbody > tr.info > td, .table > tbody > tr.info > th, .table > tbody > tr > td.info, .table > tbody > tr > th.info, .table > tfoot > tr.info > td, .table > tfoot > tr.info > th, .table > tfoot > tr > td.info, .table > tfoot > tr > th.info, .table > thead > tr.info > td, .table > thead > tr.info > th, .table > thead > tr > td.info, .table > thead > tr > th.info {
+    background-color: transparent;
+}
+
+.table > tbody > tr.danger > td, .table > tbody > tr.danger > th, .table > tbody > tr > td.danger, .table > tbody > tr > th.danger, .table > tfoot > tr.danger > td, .table > tfoot > tr.danger > th, .table > tfoot > tr > td.danger, .table > tfoot > tr > th.danger, .table > thead > tr.danger > td, .table > thead > tr.danger > th, .table > thead > tr > td.danger, .table > thead > tr > th.danger {
+    background-color: transparent;
+}
+
+.qrcode.pull-right.hidden-xs {
+    position: fixed;
+    z-index: 99;
+    right: 0;
+    top: 20px;
 }
