--- a/views/network.jade
+++ b/views/network.jade
@@ -25,10 +25,10 @@ block content
           }
         },
         columns: [
-          { data: 'address', width: '25%' },
-          { data: 'protocol', width: '25%' },
-          { data: 'version', width:'25%' },
-          { data: 'country', width: '25%'}
+          { data: 'address', width: '33.33%' },
+          { data: 'protocol', width: '33.33%' },
+          { data: 'version', width:'33.33%' }
+          // { data: 'country', width: '25%'}
         ]
       });
     });
@@ -49,5 +49,5 @@ block content
                     th.text-center #{settings.locale.net_address}
                     th.text-center #{settings.locale.net_protocol}
                     th.text-center #{settings.locale.net_subversion}
-                    th.text-center #{settings.locale.net_country}
+                    //th.text-center #{settings.locale.net_country}
                 tbody.text-center
